changed talks page to why open
Added an abstract

--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,11 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Why creating an open assignment is good for your students"
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, California"
+permalink: /talks/whyopenworks
+venue: "UNC Charlotte, Atkins Library"
+date: 2022-12-07
+location: "Charlotte, North Carolina"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+This talk is about why an instructor should consider using an open assignment in their class.  The benefits to their students includes more active engagement, motivation, and authentic learning.  Also, they are involved in more of the holistic scholarly conversation including peer review, audience consideration, dissemination, intellectual property rights, and more.
